# ai-extract-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/config/: configModel.py
app/controllers/: extractor_controller.py
app/models/: extractor_model.py
app/models/chunck/: chunk_method.py
app/service/: extractor_service.py
app/views/prompt/: context.py
app/views/schema/: response.py  schema.py
src/: main.py
